Update fix bug broken ui mobile layout

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -16,7 +16,8 @@
 }
 .quiz-container {
     min-height: 100vh;
-    display: grid;
+    /* display: grid; */
+    padding: 2rem;
     align-content: space-between;
 }
 .wrap-form {
@@ -299,7 +300,7 @@ ul.ks-cboxtags li input[type="checkbox"]:focus+label {
     gap: 1rem;
 }
 .welcome__image{
-    grid-area: hero;
+    /* grid-area: hero; */
     width: 166px;
     margin: 2rem auto auto;
 }
@@ -333,10 +334,20 @@ ul.ks-cboxtags li input[type="checkbox"]:focus+label {
     font-weight: 700;
 }
 
-.result {
-    /*display: grid;*/
-    /*grid-template-columns: 1fr;*/
-    /*column-gap: 5rem;*/
+.result-container.page-width {
+    padding: 0;
+    position: relative;
+}
+
+.result-container.page-width .breakout {
+    margin: 0;
+    padding: 0;
+    position: initial;
+    width: 100%;
+}
+
+.result-container.page-width .grid{
+    margin: 0;
 }
 
 .result__images{
@@ -609,9 +620,15 @@ ul.ks-cboxtags li input[type="checkbox"]:focus+label {
    opacity: 1;
 }
 
+.product__body__ingredients__carousel{
+    width: 100%;
+    position: relative;
+}
+
 .carousel{
-    width: calc(100vw - 50px);
-    margin-left: 12px;
+    width: calc(100% - 50px);
+    margin-left: 0;
+    padding-left: 12px;
 }
 
 .carousel__pagination{
